--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "keywords": [],
   "author": "",
@@ -12,8 +12,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jasmine": "^3.5.0",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.22",
+    "request": "^2.88.2",
     "socket.io": "^2.3.0"
   }
 }
