--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "jasmine": "^3.5.0",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.22",
     "request": "^2.88.2",
     "socket.io": "^2.3.0"
