--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "jasmine"
   },
@@ -12,11 +12,17 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "heroku": "^7.42.5",
+    "jQuery": "^1.7.4",
     "jasmine": "^3.5.0",
-    "lodash": "^4.17.19",
+    "local": "^0.3.3",
     "moment": "^2.27.0",
     "mongoose": "^5.9.22",
     "request": "^2.88.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "web": "0.0.2"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
