--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jasmine"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Jaeyoung Kim",
+  "license": "myself",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
