--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "local": "^0.3.3",
     "moment": "^2.27.0",
     "mongoose": "^5.9.22",
+    "node": "^14.5.0",
     "request": "^2.88.2",
     "socket.io": "^2.3.0",
     "web": "0.0.2"
