--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": "0.10.x"
+    "node": "12.x.x"
   },
   "main": "index.html",
   "dependencies": {
