--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "",
+  "proxy": "http://localhost:3000/",
   "engines": {
     "node": "12.x.x"
   },
