--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "engines": {
     "node": "12.x"
   },
-  "main": "server.js",
+  "main": "index.html",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
